fix overflow

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,6 +1,7 @@
 .Central {
   display: flex;
   justify-content: center;
+  margin-bottom: 13%;
 }
 .NoDoubtPut {
   display: flex;
